package com.tetras.ingredient;

public class DoseUrineMusaraigne implements Ingredient {

    public static DoseUrineMusaraigne prendre() {
        return new DoseUrineMusaraigne();
    }

}