package com.tetras.ingredient;

public class FeuilleSecheTout implements Ingredient {

    public static FeuilleSecheTout prendre() {
        return new FeuilleSecheTout();
    }
}