package com.tetras.ingredient;

public interface Ingredient {

}
