package com.tetras.materiel;

import com.tetras.ingredient.Ingredient;

public class Recipient {

    public static Recipient prendre() {
        return new Recipient();
    }

    public void ajouter(Ingredient ingredient) {

    }
}