@startuml Facade

@startuml Facade

package com.tetras.ingredient #DDDDDD {
    interface Ingredient

    class DoseUrineMusaraigne {
        {static} + prendre() : DoseUrineMusaraigne
    }

    class FeuilleSecheTout {
        {static} + prendre() : FeuilleSecheTout
    }
}

package com.tetras.materiel #AAAAAA {
    class Recipient {
        {static} + prendre() : Recipient
        + ajouter(Ingredient)
    }

    class PieceMolduArgent {
        {static} +  prendre() : PieceMolduArgent
        + couvrir(DoseUrineMusaraigne)
        + essuyer(FeuilleSecheTout)
        + transformer(): PieceOr
    }

    class PieceOr
}

package com.tetras #FFFFFF {
    class PotionTest {
        attendre(int)
    }
}

DoseUrineMusaraigne ..|> Ingredient
FeuilleSecheTout ..|> Ingredient
PieceMolduArgent .u.|> Ingredient

@enduml